--- a/src/i18n/spa.json
+++ b/src/i18n/spa.json
@@ -1,6 +1,5 @@
 {
   "listenReveal": "Escuchar y Revelar",
-  "listenChoose": "Escuchar y Elegir",
   "listenOrder": "Continuar la frase",
   "listenFill": "Rellenar huecos",
   "sentenceBuilder": "Construir la frase",
@@ -16,7 +15,6 @@
   "buildSentence": "Construye la frase",
   "completed": "¡Bien hecho!",
   "continue": "Continuar",
-  "comingSoon": "Próximamente",
   "chapter": "Capítulo",
   "loading": "Cargando...",
   "audioOnly": "Solo audio — no hay texto disponible para este idioma",
@@ -24,12 +22,15 @@
   "heroTagline": "Aprendizaje fácil de idiomas",
   "heroHeadline": "La experiencia de aprendizaje multilingüe incomparable",
   "heroSub": "Escucha en {primary} idiomas - con ejercicios en {secondary} lenguas maternas",
-  "heroCta": "Selecciona tu lengua materna aquí",
-  "selectMotherTongue": "Selecciona tu lengua materna",
-  "selectLanguageToLearn": "Selecciona un idioma para aprender",
+  "selectMotherTongue": "Elegir lengua materna",
+  "selectLanguageToLearn": "Elegir idioma a aprender",
   "searchPlaceholder": "Buscar por nombre, nombre vernáculo o código...",
   "languageCount": "{count} idiomas",
   "languageCountFiltered": "{visible} de {total} idiomas",
   "noLanguagesFound": "No se encontraron idiomas",
-  "motherTongueBadge": "Lengua materna: {label}"
+  "motherTongueBadge": "Lengua materna: {label}",
+  "screenshotHeading": "Cómo funciona",
+  "screenshotSelectStory": "Selecciona una historia",
+  "screenshotSelectExercise": "Selecciona un ejercicio",
+  "screenshotContinue": "Continuar"
 }
